# g3log

./: .travis.yml  Build.cmake  CMakeLists.txt  GenerateMacroDefinitionsFile.cmake  Options.cmake  README.markdown  ai_build.bat  toolchain.cmake
example/: Example.cmake
scripts/: CMakeToolchainNISOM.cmake  build_msvc.bat  build_nisom.bat
src/: logmessage.cpp  stacktrace_windows.cpp  time.cpp
src/g3log/: logcapture.hpp  logmessage.hpp
